--- a/Dashboard/ConnectionControlCollectionViewCell.xib
+++ b/Dashboard/ConnectionControlCollectionViewCell.xib
@@ -1,19 +1,39 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11198.2" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ConnectionControlCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ConnectionControlCollectionViewCell" customModule="Dashboard" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="388" height="55"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="388" height="55"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JBU-8a-fvz" customClass="WireButton" customModule="Dashboard" customModuleProvider="target">
+                        <inset key="contentEdgeInsets" minX="17" minY="4" maxX="17" maxY="4"/>
+                        <state key="normal" title="Disconnect">
+                            <color key="titleColor" red="0.0" green="0.73725490199999999" blue="0.90588235289999997" alpha="1" colorSpace="calibratedRGB"/>
+                        </state>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="emphasized" value="NO"/>
+                        </userDefinedRuntimeAttributes>
+                    </button>
+                </subviews>
             </view>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="JBU-8a-fvz" secondAttribute="bottom" constant="8" id="N1T-sR-3c3"/>
+                <constraint firstItem="JBU-8a-fvz" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="kVm-PI-Cvb"/>
+                <constraint firstAttribute="trailing" secondItem="JBU-8a-fvz" secondAttribute="trailing" constant="8" id="ulU-CE-wAL"/>
+                <constraint firstItem="JBU-8a-fvz" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="ulf-C1-K5y"/>
+            </constraints>
+            <size key="customSize" width="388" height="55"/>
+            <point key="canvasLocation" x="-148" y="-75.5"/>
         </collectionViewCell>
     </objects>
 </document>
