--- a/Dashboard/DiagnosticsCollectionViewCell.xib
+++ b/Dashboard/DiagnosticsCollectionViewCell.xib
@@ -1,19 +1,49 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11198.2" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="DiagnosticsCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="DiagnosticsCollectionViewCell" customModule="Dashboard" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="351" height="42"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="351" height="42"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Diagnostics" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="or3-an-ryw">
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G0Y-iU-Z1I">
+                        <constraints>
+                            <constraint firstAttribute="width" constant="25" id="8oh-5m-9dy"/>
+                            <constraint firstAttribute="height" constant="25" id="IZ4-oV-ez4"/>
+                        </constraints>
+                        <state key="normal" image="forward"/>
+                    </button>
+                </subviews>
             </view>
+            <color key="backgroundColor" red="0.0" green="0.73725490199999999" blue="0.90588235289999997" alpha="1" colorSpace="calibratedRGB"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="G0Y-iU-Z1I" secondAttribute="bottom" constant="8" id="Fh1-Q1-PWP"/>
+                <constraint firstItem="or3-an-ryw" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="G7i-Qa-PG8"/>
+                <constraint firstAttribute="trailing" secondItem="G0Y-iU-Z1I" secondAttribute="trailing" constant="8" id="Tti-03-QLh"/>
+                <constraint firstItem="G0Y-iU-Z1I" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="Yba-ya-sHg"/>
+                <constraint firstItem="G0Y-iU-Z1I" firstAttribute="leading" secondItem="or3-an-ryw" secondAttribute="trailing" constant="8" id="dAZ-tv-bLj"/>
+                <constraint firstAttribute="bottom" secondItem="or3-an-ryw" secondAttribute="bottom" constant="8" id="dIf-S2-DDU"/>
+                <constraint firstItem="or3-an-ryw" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="ppZ-38-8Hj"/>
+            </constraints>
+            <size key="customSize" width="351" height="42"/>
+            <point key="canvasLocation" x="184.5" y="50"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="forward" width="25" height="25"/>
+    </resources>
 </document>
