--- a/Dashboard/NetworkSatelliteCollectionViewCell.xib
+++ b/Dashboard/NetworkSatelliteCollectionViewCell.xib
@@ -1,19 +1,78 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11198.2" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="TestCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-            <autoresizingMask key="autoresizingMask"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell.networkSatelliteMode" id="gTV-IL-0wX" customClass="NetworkSatelliteCollectionViewCell" customModule="Dashboard" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="370" height="107"/>
+            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="370" height="107"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="satellite" translatesAutoresizingMaskIntoConstraints="NO" id="KnJ-oH-Iy3">
+                        <constraints>
+                            <constraint firstAttribute="width" constant="50" id="ASW-m4-vNL"/>
+                            <constraint firstAttribute="height" constant="50" id="caf-5a-Xdh"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="efv-xd-oaK">
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="jzv-z0-Po8">
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="NeK-l4-GWO">
+                                <segments>
+                                    <segment title="Voice"/>
+                                    <segment title="Data"/>
+                                </segments>
+                                <connections>
+                                    <action selector="modeStateChanged:" destination="gTV-IL-0wX" eventType="valueChanged" id="Wuh-WV-kG2"/>
+                                </connections>
+                            </segmentedControl>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w0P-n7-y8Z" customClass="WireButton" customModule="Dashboard" customModuleProvider="target">
+                                <inset key="contentEdgeInsets" minX="17" minY="4" maxX="17" maxY="4"/>
+                                <state key="normal" title="Activate">
+                                    <color key="titleColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="emphasized" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="dataModeChanged:" destination="gTV-IL-0wX" eventType="touchUpInside" id="qLo-CX-EKS"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                    </stackView>
+                </subviews>
             </view>
+            <color key="backgroundColor" red="0.0" green="0.73725490199999999" blue="0.90588235289999997" alpha="1" colorSpace="calibratedRGB"/>
+            <constraints>
+                <constraint firstItem="efv-xd-oaK" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="9Ox-Ta-u5L"/>
+                <constraint firstItem="jzv-z0-Po8" firstAttribute="top" secondItem="efv-xd-oaK" secondAttribute="bottom" constant="8" id="GS4-by-BuK"/>
+                <constraint firstItem="jzv-z0-Po8" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Qsg-CO-J5c"/>
+                <constraint firstItem="efv-xd-oaK" firstAttribute="leading" secondItem="KnJ-oH-Iy3" secondAttribute="trailing" constant="8" id="Ybn-6r-Ifc"/>
+                <constraint firstAttribute="bottom" secondItem="jzv-z0-Po8" secondAttribute="bottom" constant="8" id="ZDI-cv-t1F"/>
+                <constraint firstItem="KnJ-oH-Iy3" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="gcm-o1-mPg"/>
+                <constraint firstItem="KnJ-oH-Iy3" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="nUy-ob-dhT"/>
+            </constraints>
+            <size key="customSize" width="370" height="107"/>
+            <connections>
+                <outlet property="dataModeButton" destination="w0P-n7-y8Z" id="0WH-UG-iRT"/>
+                <outlet property="modeToggle" destination="NeK-l4-GWO" id="3mj-Ha-zmG"/>
+                <outlet property="stateLabel" destination="efv-xd-oaK" id="1Cc-aP-2DQ"/>
+            </connections>
+            <point key="canvasLocation" x="194" y="120.5"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="satellite" width="25" height="25"/>
+    </resources>
 </document>
