--- a/Dashboard/SAPACollectionViewCell.xib
+++ b/Dashboard/SAPACollectionViewCell.xib
@@ -1,19 +1,54 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11198.2" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="SAPACollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell.sapa" id="gTV-IL-0wX" customClass="SAPACollectionViewCell" customModule="Dashboard" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="446" height="79"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="446" height="79"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Satellite Antenna Signal Assistance" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5eU-D6-cNJ">
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b6k-OS-GdP" customClass="WireButton" customModule="Dashboard" customModuleProvider="target">
+                        <inset key="contentEdgeInsets" minX="17" minY="4" maxX="17" maxY="4"/>
+                        <state key="normal" title="Button">
+                            <color key="titleColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        </state>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="emphasized" value="YES"/>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="filled" value="YES"/>
+                        </userDefinedRuntimeAttributes>
+                        <connections>
+                            <action selector="statusDidChange:" destination="gTV-IL-0wX" eventType="touchUpInside" id="pdD-b3-olA"/>
+                        </connections>
+                    </button>
+                </subviews>
             </view>
+            <color key="backgroundColor" red="0.0" green="0.73725490199999999" blue="0.90588235289999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="5eU-D6-cNJ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="PCU-kj-3WY"/>
+                <constraint firstItem="5eU-D6-cNJ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="ZfN-yS-rmg"/>
+                <constraint firstAttribute="trailing" secondItem="5eU-D6-cNJ" secondAttribute="trailing" constant="8" id="g9U-wE-0Uh"/>
+                <constraint firstAttribute="bottom" secondItem="b6k-OS-GdP" secondAttribute="bottom" constant="8" id="hCu-iB-RUL"/>
+                <constraint firstItem="b6k-OS-GdP" firstAttribute="top" secondItem="5eU-D6-cNJ" secondAttribute="bottom" constant="8" id="pN0-G1-BVt"/>
+                <constraint firstItem="b6k-OS-GdP" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="ySY-9z-H9P"/>
+            </constraints>
+            <size key="customSize" width="446" height="79"/>
+            <connections>
+                <outlet property="statusButton" destination="b6k-OS-GdP" id="wo0-bT-uhm"/>
+            </connections>
+            <point key="canvasLocation" x="232" y="68.5"/>
         </collectionViewCell>
     </objects>
 </document>
