--- a/Dashboard/SystemAlertsCollectionViewCell.xib
+++ b/Dashboard/SystemAlertsCollectionViewCell.xib
@@ -1,19 +1,101 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11198.2" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="SystemAlertsCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="SystemAlertsCollectionViewCell" customModule="Dashboard" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="369" height="212"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="369" height="212"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="status-bar-system-alert-icon" translatesAutoresizingMaskIntoConstraints="NO" id="5Mz-CY-RVW">
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="DnP-Jk-eom"/>
+                            <constraint firstAttribute="width" secondItem="5Mz-CY-RVW" secondAttribute="height" multiplier="1:1" id="N3l-01-rx7"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="System Alerts" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T2c-Qd-26O">
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="P6X-hJ-IJJ">
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SIM Absent" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JLQ-Vs-hfr">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Critical Tempature" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dcP-NB-UOq">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Critical Battery" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="she-9a-81u">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Powering Down" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XDP-tt-z5k">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Smart Network Switching" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K3B-W3-w3F">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QTE-aB-zM0">
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="dob-aT-zAN"/>
+                            <constraint firstAttribute="width" constant="25" id="vbL-HL-x8t"/>
+                        </constraints>
+                        <state key="normal" image="attention"/>
+                        <connections>
+                            <action selector="attentionChanged:" destination="gTV-IL-0wX" eventType="touchUpInside" id="IKe-Af-xPZ"/>
+                        </connections>
+                    </button>
+                </subviews>
             </view>
+            <color key="backgroundColor" red="0.0" green="0.73725490199999999" blue="0.90588235289999997" alpha="1" colorSpace="calibratedRGB"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="P6X-hJ-IJJ" secondAttribute="bottom" constant="8" id="28e-rw-mjq"/>
+                <constraint firstItem="T2c-Qd-26O" firstAttribute="leading" secondItem="5Mz-CY-RVW" secondAttribute="trailing" constant="8" id="6zB-HK-1pl"/>
+                <constraint firstItem="5Mz-CY-RVW" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="Dje-IT-pml"/>
+                <constraint firstItem="P6X-hJ-IJJ" firstAttribute="top" secondItem="T2c-Qd-26O" secondAttribute="bottom" constant="8" id="MXK-jG-r1f"/>
+                <constraint firstItem="5Mz-CY-RVW" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="QXK-1c-xZl"/>
+                <constraint firstAttribute="trailing" secondItem="P6X-hJ-IJJ" secondAttribute="trailing" constant="8" id="Qcr-eJ-rI9"/>
+                <constraint firstAttribute="trailing" secondItem="QTE-aB-zM0" secondAttribute="trailing" constant="8" id="buG-Xk-DdB"/>
+                <constraint firstItem="QTE-aB-zM0" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="mNH-BY-nhT"/>
+                <constraint firstItem="QTE-aB-zM0" firstAttribute="leading" secondItem="T2c-Qd-26O" secondAttribute="trailing" constant="8" id="qI6-B1-myO"/>
+                <constraint firstItem="P6X-hJ-IJJ" firstAttribute="leading" secondItem="5Mz-CY-RVW" secondAttribute="trailing" constant="8" id="qZm-Nl-jyv"/>
+                <constraint firstItem="T2c-Qd-26O" firstAttribute="centerY" secondItem="5Mz-CY-RVW" secondAttribute="centerY" id="td5-BN-zrV"/>
+            </constraints>
+            <size key="customSize" width="369" height="212"/>
+            <connections>
+                <outlet property="attentionButton" destination="QTE-aB-zM0" id="41b-ii-C1A"/>
+                <outlet property="criticalBatteryLabel" destination="she-9a-81u" id="zTf-VT-RcN"/>
+                <outlet property="criticalTempatureLabel" destination="dcP-NB-UOq" id="QgU-JP-GDR"/>
+                <outlet property="poweringDown" destination="XDP-tt-z5k" id="zI7-9x-fhh"/>
+                <outlet property="simAbsentLabel" destination="JLQ-Vs-hfr" id="gry-xt-JOQ"/>
+                <outlet property="smartNetworkSwitching" destination="K3B-W3-w3F" id="UIf-NT-fOW"/>
+            </connections>
+            <point key="canvasLocation" x="193.5" y="135"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="attention" width="25" height="25"/>
+        <image name="status-bar-system-alert-icon" width="25" height="25"/>
+    </resources>
 </document>
